zellij-server/src/plugins/unit/snapshots/zellij_server__plugins__plugin_tests__break_panes_to_new_tab_plugin_command.snap
---
source: zellij-server/src/plugins/./unit/plugin_tests.rs
expression: "format!(\"{:#?}\", screen_instruction)"
---
Some(
    BreakPanesToNewTab {
        pane_ids: [
            Terminal(
                1,
            ),
            Plugin(
                2,
            ),
        ],
        default_shell: Some(
            RunCommand(
                RunCommand {
                    command: ".",
                    args: [],
                    cwd: None,
                    hold_on_close: false,
                    hold_on_start: false,
                    originating_plugin: None,
                    use_terminal_title: true,
                },
            ),
        ),
        should_change_focus_to_new_tab: true,
        new_tab_name: Some(
            "new_tab_name",
        ),
        client_id: 1,
        completion_tx: Some(
            NotificationEnd {
                channel: None,
                resolution: None,
                exit_status: None,
                unblock_condition: None,
                affected_pane_id: None,
                affected_tab_id: None,
                error_message: None,
                stdout_message: None,
            },
        ),
    },
)
