zellij-server/src/plugins/unit/snapshots/zellij_server__plugins__plugin_tests__dump_layout_success_plugin_command.snap
---
source: zellij-server/src/plugins/./unit/plugin_tests.rs
expression: "format!(\"{:#?}\", plugin_bytes_event)"
---
Some(
    "Layout dump success: layout {\n\r    session_layer {\n\r        pane size=1 borderless=true {\n\r            plugin location=\"tab-bar\" {\n\r                session_canvas true\n\r                session_canvas_kind \"compact-bar\"\n\r                // 🚥 zone: clear the macOS traffic lights in the native window\n\r                left_inset \"6\"\n\r            }\n\r        }\n\r        pane split_direction=\"vertical\" {\n\r            pane size=24 borderless=true {\n\r                plugin location=\"session-manager\" {\n\r                    session_canvas true\n\r                    session_canvas_kind \"session-manager\"\n\r                    rail true\n\r                    pane_title \"Sessions\"\n\r                }\n\r            }\n\r            pane { children; }\n\r        }\n\r        pane size=1 borderless=true {\n\r            plugin location=\"status-bar\" {\n\r                session_canvas true\n\r                session_canvas_kind \"status-bar\"\n\r            }\n\r        }\n\r    }\n\r\n\r    default_tab_template {\n\r        pane { children; }\n\r    }\n\r}\n\r",
)
